--- a/app/src/main/res/layout/favorite_items.xml
+++ b/app/src/main/res/layout/favorite_items.xml
@@ -17,25 +17,25 @@
 
 
         <TextView
-            android:id="@+id/mealCountry"
+            android:id="@+id/mealName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/counteryName"
-            app:layout_constraintEnd_toEndOf="@+id/counteryName"
+            app:layout_constraintBottom_toTopOf="@+id/mealCountry"
+            app:layout_constraintEnd_toEndOf="@+id/mealCountry"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/counteryName"
+            app:layout_constraintStart_toStartOf="@+id/mealCountry"
             app:layout_constraintTop_toBottomOf="@+id/mealImage" />
 
         <TextView
-            android:id="@+id/counteryName"
+            android:id="@+id/mealCountry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mealCountry" />
+            app:layout_constraintTop_toBottomOf="@+id/mealName" />
 
         <Button
             android:id="@+id/signUpPageButton"
