search by Ingredient Api with retrofit using MVP design architecture

--- a/app/src/main/res/layout/fragment_search_by_ingridient.xml
+++ b/app/src/main/res/layout/fragment_search_by_ingridient.xml
@@ -38,6 +38,7 @@
             </SearchView>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ingredientRecyclerView"
                 android:layout_width="352dp"
                 android:layout_height="561dp"
                 app:layout_constraintBottom_toBottomOf="parent"
