--- a/app/src/main/res/layout/favorite_items.xml
+++ b/app/src/main/res/layout/favorite_items.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="250dp"
+    android:layout_height="280dp"
     android:layout_margin="20dp"
     android:elevation="6dp"
     app:cardCornerRadius="20dp"
@@ -15,35 +15,59 @@
         android:layout_height="match_parent">
 
 
-
         <TextView
-            android:id="@+id/mealName"
+            android:id="@+id/favMealName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/mealCountry"
-            app:layout_constraintEnd_toEndOf="@+id/mealCountry"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/mealCountry"
-            app:layout_constraintTop_toBottomOf="@+id/mealImage" />
-
-        <TextView
-            android:id="@+id/mealCountry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.518"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mealName" />
+            app:layout_constraintTop_toTopOf="@+id/guideline16" />
+
+        <TextView
+            android:id="@+id/favMealCountry"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toTopOf="@+id/guideline17"
+            app:layout_constraintEnd_toEndOf="@+id/favMealName"
+            app:layout_constraintStart_toStartOf="@+id/favMealName"
+            app:layout_constraintTop_toBottomOf="@+id/favMealName" />
 
         <Button
-            android:id="@+id/signUpPageButton"
-            android:layout_width="51dp"
-            android:layout_height="35dp"
+            android:id="@+id/favButton"
+            android:layout_width="52dp"
+            android:layout_height="45dp"
             android:background="@drawable/baseline_delete_outline_24"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mealImage" />
+            app:layout_constraintTop_toTopOf="@+id/guideline17" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/favMealImage"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="100dp"
+            app:layout_constraintBottom_toTopOf="@+id/favMealName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="174dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="227dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
