--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -60,7 +60,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
             <Button
-                android:id="@+id/signUpPageButton"
+                android:id="@+id/favButton"
                 android:layout_width="186dp"
                 android:layout_height="41dp"
                 android:layout_marginBottom="50dp"
