--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="5dp"
-    tools:context=".mealDetails.MealDetailsFragment">
+    tools:context=".mealDetails.view.MealDetailsFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -50,7 +50,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/myImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:src="@tools:sample/avatars" />
@@ -60,7 +60,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textView15"
+                        android:id="@+id/myName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="60dp"
