--- a/app/src/main/res/layout/favorite_items.xml
+++ b/app/src/main/res/layout/favorite_items.xml
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toBottomOf="@+id/favMealName" />
 
         <Button
-            android:id="@+id/favButton"
+            android:id="@+id/btnSignup"
             android:layout_width="52dp"
             android:layout_height="45dp"
             android:background="@drawable/baseline_delete_outline_24"
