--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -36,19 +36,19 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/topcard"
-                android:layout_width="107dp"
+                android:layout_width="76dp"
 
-                android:layout_height="85dp"
-                app:cardCornerRadius="1500dp"
-
+                android:layout_height="69dp"
                 android:layout_marginStart="16dp"
+
                 android:layout_marginTop="25dp"
+                app:cardCornerRadius="1500dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/acc_sett_txt">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="84dp"
+                    android:layout_height="67dp">
 
                     <ImageView
                         android:id="@+id/acccard"
@@ -58,31 +58,34 @@
                         android:src="@drawable/accounts"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView13"
-        android:layout_width="132dp"
-        android:layout_height="76dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="56dp"
-        android:text="@string/logout_txt"
+        android:id="@+id/profileTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomcard" />
 
     <Button
-        android:id="@+id/log0ut"
-        android:layout_width="74dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="83dp"
-        android:background="@drawable/logout"
-        android:backgroundTint="@color/darkGreen"
+        android:id="@+id/logoutBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="@string/logoutbtn"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomcard" />
+        app:layout_constraintTop_toBottomOf="@+id/profileTv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
