--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -70,7 +70,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/addToFavButton"
                         android:layout_width="45dp"
                         android:layout_height="29dp"
                         android:layout_marginStart="150dp"
@@ -103,7 +103,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/cardView44" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView2"
+                android:id="@+id/myRecyclerView"
                 android:layout_width="365dp"
                 android:layout_height="81dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/recipeView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:text="TextView"
@@ -134,7 +134,7 @@
                 android:text="@string/recipe"
                 app:layout_constraintBottom_toTopOf="@+id/guideline13"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />
+                app:layout_constraintTop_toBottomOf="@+id/myRecyclerView" />
 
             <VideoView
                 android:id="@+id/videoView"
