--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -39,11 +39,18 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_begin="361dp" />
 
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="321dp" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView44"
-                android:layout_width="0dp"
+                android:layout_width="200dp"
                 android:layout_height="0dp"
-                app:cardCornerRadius="60dp"
+                app:cardCornerRadius="130dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline12"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,52 +70,37 @@
                         android:id="@+id/myName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="60dp"
                         android:text="TextView"
+                        android:textColor="#FFFFFF"
+                        app:layout_constraintBottom_toTopOf="@+id/myCountry"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <Button
-                        android:id="@+id/addToFavButton"
-                        android:layout_width="45dp"
-                        android:layout_height="29dp"
-                        android:layout_marginStart="150dp"
-                        android:background="@drawable/baseline_favorite_border_24"
-                        app:layout_constraintBottom_toBottomOf="@+id/button3"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/button3"
-                        app:layout_constraintVertical_bias="0.0" />
-
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="51dp"
-                        android:layout_height="29dp"
-                        android:layout_marginEnd="150dp"
-                        android:layout_marginBottom="32dp"
-                        android:background="@drawable/calendar"
+                    <TextView
+                        android:id="@+id/myCountry"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TextView"
+                        android:textColor="#FFFFFF"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/myName" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView44" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/myRecyclerView"
                 android:layout_width="365dp"
                 android:layout_height="81dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+                app:layout_constraintHorizontal_bias="0.432"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/recipeView"
@@ -145,6 +137,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline14" />
+
+            <Button
+                android:id="@+id/addToFavButton"
+                android:layout_width="45dp"
+                android:layout_height="29dp"
+                android:layout_marginBottom="32dp"
+                android:background="@drawable/baseline_favorite_border_24"
+                app:layout_constraintBottom_toTopOf="@+id/myRecyclerView"
+                app:layout_constraintStart_toStartOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
