--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -52,6 +52,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="146dp">
 
+                  <Button
+                      android:id="@+id/skipBtn"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="16dp"
+                      android:layout_marginEnd="28dp"
+                      android:background="@drawable/custom_button"
+                      android:text="@string/skip"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>
 
@@ -148,6 +158,7 @@
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" >
 
+
                         <ImageView
                             android:id="@+id/imageView4"
                             android:layout_width="match_parent"
@@ -161,3 +172,15 @@
       </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+<!--<Button-->
+<!--android:id="@+id/skip_btn"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_marginTop="28dp"-->
+<!--android:layout_marginEnd="40dp"-->
+<!--android:background="@drawable/custom_button"-->
+<!--android:text="@string/skipBtn"-->
+<!--app:layout_constraintEnd_toEndOf="parent"-->
+<!--app:layout_constraintTop_toTopOf="parent" />-->
