--- a/app/src/main/res/layout/you_might_like_img.xml
+++ b/app/src/main/res/layout/you_might_like_img.xml
@@ -9,6 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="206dp"
         android:layout_height="211dp"
+        app:cardCornerRadius="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ExtraText">>
