--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -30,12 +30,13 @@
         </LinearLayout>
 
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/myRecyclerView"
-            android:layout_width="368dp"
-            android:layout_height="120dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.372"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +54,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView6"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="260dp"
             android:background="@color/darkGreen"
             android:backgroundTint="@color/darkGreen"
             app:cardCornerRadius="50dp"
@@ -67,8 +68,9 @@
 
                 <Button
                     android:id="@+id/addToFavButton"
-                    android:layout_width="56dp"
-                    android:layout_height="48dp"
+                    android:layout_width="42dp"
+                    android:layout_height="39dp"
+                    android:layout_margin="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/baseline_favorite_border_24"
@@ -99,7 +101,7 @@
                     android:id="@+id/cardView5"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="32dp"
                     android:layout_marginBottom="24dp"
                     app:cardCornerRadius="100dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -172,7 +174,7 @@
 
         <TextView
             android:id="@+id/recipeView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
             android:layout_marginTop="16dp"
