--- a/app/src/main/res/layout/ingredients_items.xml
+++ b/app/src/main/res/layout/ingredients_items.xml
@@ -2,9 +2,12 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="120dp"
-    android:layout_height="150dp"
+    android:layout_width="100dp"
+    android:layout_height="120dp"
     android:layout_margin="20dp"
+    android:background="@color/darkGreen"
+    android:backgroundTint="@color/darkGreen"
+
     android:elevation="6dp"
     app:cardCornerRadius="30dp"
     app:cardElevation="20dp">
@@ -16,9 +19,10 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_margin="10dp"
+            android:background="@color/darkYellow"
             app:cardCornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +39,6 @@
             android:id="@+id/ingredientName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
